--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.android.androidkejar_2">
+    package="com.example.android.androidkejar_2" >
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/school"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme" >
+        <activity android:name=".MainActivity" />
+        <activity
+            android:name=".splashScreen.SplashActivity"
+            android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".OrderActivity"></activity>
-        <activity android:name=".AboutActivity"></activity>
+        <activity android:name=".OrderActivity" />
+        <activity android:name=".AboutActivity" />
+        <activity android:name=".home.HomeActivity" >
+        </activity>
+        <activity android:name=".list_view.ListActivity" >
+        </activity>
     </application>
 
 </manifest>
